--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,15 @@
 
 	<modules>
 		<module>project-web</module>
+		<module>project-core</module>
+		<module>project-commons</module>
+		<module>project-service</module>
 	</modules>
 
 	<properties>
 		<spring.version>4.1.0.RELEASE</spring.version>
+		<jackson.version>2.4.2</jackson.version>
+		<log4j.version>2.0.2</log4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -24,9 +29,27 @@
 			<!-- </dependency> -->
 
 			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-webmvc</artifactId>
-				<version>${spring.version}</version>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-xml</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 
 		</dependencies>
@@ -38,12 +61,6 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.0.2</version>
 		</dependency>
 
 	</dependencies>
