--- a/project-web/src/main/webapp/WEB-INF/web.xml
+++ b/project-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,30 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>project-template-4j</display-name>
 
+	<!-- 解决编码问题 -->
+	<filter>
+		<filter-name>characterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>characterEncodingFilter</filter-name>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>commonFilter</filter-name>
+		<filter-class>net.dumbee.project.filter.CommonFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>commonFilter</filter-name>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
