add operation result bean and error controller

--- a/project-web/pom.xml
+++ b/project-web/pom.xml
@@ -13,7 +13,11 @@
 	<name>project-web Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-
+		<dependency>
+			<groupId>net.dumbee</groupId>
+			<artifactId>project-commons</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
