--- a/project-web/src/main/webapp/WEB-INF/web.xml
+++ b/project-web/src/main/webapp/WEB-INF/web.xml
@@ -6,23 +6,36 @@
 	<display-name>project-template-4j</display-name>
 
 	<!-- 解决编码问题 -->
-	<filter>
-		<filter-name>characterEncodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-	</filter>
+<!-- 	<filter> -->
+<!-- 		<filter-name>characterEncodingFilter</filter-name> -->
+<!-- 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>encoding</param-name> -->
+<!-- 			<param-value>UTF-8</param-value> -->
+<!-- 		</init-param> -->
+<!-- 	</filter> -->
+	
+	 <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
 
 	<filter-mapping>
-		<filter-name>characterEncodingFilter</filter-name>
+		<filter-name>encodingFilter</filter-name>
 		<url-pattern>*</url-pattern>
 	</filter-mapping>
 
 	<filter>
 		<filter-name>commonFilter</filter-name>
-		<filter-class>net.dumbee.project.filter.CommonFilter</filter-class>
+		<filter-class>net.dumbee.project.web.filter.CommonFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>commonFilter</filter-name>
@@ -48,4 +61,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	
+	<error-page>
+        <error-code>404</error-code>
+        <location>/error/404</location>
+<!--         <location>/404.jsp</location> -->
+    </error-page>
 </web-app>
