--- a/project-web/src/main/webapp/WEB-INF/web.xml
+++ b/project-web/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,6 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>project-template-4j</display-name>
 
-	<!-- 解决编码问题 -->
-<!-- 	<filter> -->
-<!-- 		<filter-name>characterEncodingFilter</filter-name> -->
-<!-- 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class> -->
-<!-- 		<init-param> -->
-<!-- 			<param-name>encoding</param-name> -->
-<!-- 			<param-value>UTF-8</param-value> -->
-<!-- 		</init-param> -->
-<!-- 	</filter> -->
-	
 	 <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -45,6 +35,10 @@
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>  
+        	<param-name>contextConfigLocation</param-name>  
+        	<param-value>classpath:spring/dispatcher-servlet.xml</param-value>  
+    	</init-param>  
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
@@ -55,7 +49,9 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>
+		classpath:spring/applicationContext.xml
+		</param-value>
 	</context-param>
 
 	<listener>
@@ -68,4 +64,5 @@
         <location>/error/404</location>
 <!--         <location>/404.jsp</location> -->
     </error-page>
+    
 </web-app>
