--- a/project-web/pom.xml
+++ b/project-web/pom.xml
@@ -18,6 +18,13 @@
 			<artifactId>project-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.dumbee</groupId>
+			<artifactId>project-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
