--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<spring.version>4.1.0.RELEASE</spring.version>
 		<jackson.version>2.4.2</jackson.version>
 		<log4j.version>2.0.2</log4j.version>
+		<mybatis.version>3.2.7</mybatis.version>
 	</properties>
 
 	<dependencyManagement>
