--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,18 @@
 		<spring.version>4.1.0.RELEASE</spring.version>
 		<jackson.version>2.4.2</jackson.version>
 		<log4j.version>2.0.2</log4j.version>
-		<mybatis.version>3.2.7</mybatis.version>
+		<!-- <mybatis.version>3.2.7</mybatis.version> -->
+		<hibernate.version>4.3.5.Final</hibernate.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- <dependency> -->
-			<!-- <groupId>junit</groupId> -->
-			<!-- <artifactId>junit</artifactId> -->
-			<!-- <version>4.11</version> -->
-			<!-- <scope>test</scope> -->
-			<!-- </dependency> -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.11</version>
+				<scope>test</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
@@ -64,19 +65,8 @@
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j.version}</version>
 			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-
-	</dependencies>
 
 	<build>
 		<plugins>
