--- a/project-web/src/main/webapp/WEB-INF/web.xml
+++ b/project-web/src/main/webapp/WEB-INF/web.xml
@@ -5,18 +5,18 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>project-template-4j</display-name>
 
-	 <filter>
-        <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-        <init-param>
-            <param-name>forceEncoding</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </filter>
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
 
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
@@ -35,10 +35,10 @@
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>  
-        	<param-name>contextConfigLocation</param-name>  
-        	<param-value>classpath:context/dispatcher-servlet.xml</param-value>  
-    	</init-param>  
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:context/dispatcher-servlet.xml</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
@@ -57,12 +57,53 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
-	
+
+	<servlet>
+		<servlet-name>DruidStatView</servlet-name>
+		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DruidStatView</servlet-name>
+		<url-pattern>/druid/*</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>DruidWebStatFilter</filter-name>
+		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+		<init-param>
+			<param-name>exclusions</param-name>
+			<param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>DruidWebStatFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- <servlet> -->
+	<!-- <servlet-name>DruidStatView</servlet-name> -->
+	<!-- <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class> -->
+	<!-- <init-param> -->
+	<!-- <param-name>deny</param-name> -->
+	<!-- <param-value>128.242.127.4</param-value> -->
+	<!-- </init-param> -->
+	<!-- <init-param> -->
+	<!-- <param-name>allow</param-name> -->
+	<!-- <param-value>128.242.127.1/24,128.242.128.1</param-value> -->
+	<!-- </init-param> -->
+	<!-- </servlet> -->
+	<!-- <servlet> -->
+	<!-- <servlet-name>DruidStatView</servlet-name> -->
+	<!-- <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class> -->
+	<!-- <init-param> -->
+	<!-- <param-name>resetEnable</param-name> -->
+	<!-- <param-value>false</param-value> -->
+	<!-- </init-param> -->
+	<!-- </servlet> -->
+
 	<error-page>
-        <error-code>404</error-code>
-        <location>/error/404</location>
-<!--         <location>/404.jsp</location> -->
-    </error-page>
-    
+		<error-code>404</error-code>
+		<location>/error/404</location>
+		<!-- <location>/404.jsp</location> -->
+	</error-page>
+
 </web-app>
